# lib/db/src/schema/index.ts
@@ -1,2 +1,4 @@
 export * from "./profiles";
 export * from "./runs";
+export * from "./conversations";
+export * from "./messages";
